Bug 402627 - A weird box appears on the screen while opening Latte settings
Summary: A weird box appears on the screen while opening Latte settings
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-28 04:31 UTC by trmdi
Modified: 2018-12-28 15:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
weird_box (628.05 KB, image/png)
2018-12-28 04:31 UTC, trmdi
Details
screenshot (2) (20.84 KB, image/png)
2018-12-28 09:50 UTC, trmdi
Details
a layout that causes the bug (9.02 KB, text/plain)
2018-12-28 14:41 UTC, trmdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2018-12-28 04:31:58 UTC
Created attachment 117140 [details]
weird_box

See the screenshot, it appears on the top left of the screen only when I open Latte settings.
Comment 1 trmdi 2018-12-28 04:40:32 UTC
After closing Latte settings, it stays on the screen until I restart Latte, it will disappear.
Comment 2 Michail Vourlakos 2018-12-28 07:34:13 UTC
Was fixed
Comment 3 trmdi 2018-12-28 09:50:14 UTC
It still stucks on my screen like the screenshot (2). That is not the painting problem because I can click on the Dock/Panel buttons.
Comment 4 trmdi 2018-12-28 09:50:54 UTC
Created attachment 117142 [details]
screenshot (2)
Comment 5 Michail Vourlakos 2018-12-28 10:41:17 UTC
What does latte-dock -d shows when the problem appears?
Comment 6 trmdi 2018-12-28 14:11:15 UTC
(In reply to Michail Vourlakos from comment #5)
> What does latte-dock -d shows when the problem appears?

Here is the output from the time I had opened Latte settings until I closed it.
https://paste.kde.org/p4tykevgj
Comment 7 Michail Vourlakos 2018-12-28 14:39:40 UTC
you get a qml warning that I dont get in my system:

[warning 21:02:53.6767] - file:///usr/lib64/qt5/qml/org/kde/plasma/components.3/ComboBox.qml:149:13: Unable to assign [undefined] to QQmlComponent*

this points to: https://github.com/KDE/plasma-framework/blob/master/src/declarativeimports/plasmacomponents3/ComboBox.qml#L149

do you have any idea?
I cant think of from where this occurred in your system. As I can not reproduce, only way is for you to try to find the cause of this at https://phabricator.kde.org/source/latte-dock/browse/master/shell/package/contents/configuration/

this is the folder containing the view settings qml code
Comment 8 trmdi 2018-12-28 14:41:19 UTC
Created attachment 117148 [details]
a layout that causes the bug

I think there is something wrong with my layout. Switching to another one fixed the bug.

Here is it, in case you want to improve the Latte engine.
Comment 9 Michail Vourlakos 2018-12-28 14:50:06 UTC
(In reply to trmdi from comment #8)
> 

With your layout I can reproduce Screenshot2 issue but I can not reproduce Screenshot1.

Can you confirm that Screenshot1 is fixed for you?
Comment 10 trmdi 2018-12-28 14:53:21 UTC
(In reply to Michail Vourlakos from comment #9)
> (In reply to trmdi from comment #8)
> > 
> 
> With your layout I can reproduce Screenshot2 issue but I can not reproduce
> Screenshot1.
> 
> Can you confirm that Screenshot1 is fixed for you?

Yes, the screenshot1 was fixed.
Comment 11 trmdi 2018-12-28 14:58:56 UTC
Ah, I've been using this layout for a long time, the bug has just appeared recently. There could be something wrong with Latte too.
Comment 12 Michail Vourlakos 2018-12-28 15:12:37 UTC
Git commit e19cbd46f6c786ee8c5fbee4abb217d8fe8b80db by Michail Vourlakos.
Committed on 28/12/2018 at 15:11.
Pushed by mvourlakos into branch 'master'.

delete secondary window when no needed

M  +1    -3    app/view/settings/primaryconfigview.cpp

https://commits.kde.org/latte-dock/e19cbd46f6c786ee8c5fbee4abb217d8fe8b80db
Comment 13 Michail Vourlakos 2018-12-28 15:13:10 UTC
ok, fixed
Comment 14 trmdi 2018-12-28 15:30:40 UTC
Ok, thank you !

Btw, could you use my layout to reproduce the bug https://bugs.kde.org/show_bug.cgi?id=402572 ?