delete secondary window when no needed

BUG: 402627